# ctop

./: CMakeLists.txt  README.md  ctop.pro  fclean.sh
app/: CMakeLists.txt  app.pro
app/include/: imodel.h  iview.h  process.h
app/src/: ctop.cpp
model/: CMakeLists.txt  model.pro
model/include/: model.h  processesinfo.h
model/src/: model.cpp  processesinfo.cpp
view/: CMakeLists.txt  view.pro
view/forms/: view.ui
view/include/: view.h
view/src/: view.cpp
